--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,15 +3,10 @@ project(ShrinkLog)
 
 set(CMAKE_CXX_STANDARD 20)
 
-add_executable(ShrinkLog main.cpp
-        src/ProjectProcessor.cpp
-        src/ProjectProcessor.h
-        src/IntfMasterMap.cpp
-        src/IntfMasterMap.h
-        src/ArgToBytesCount.cpp
-        src/ArgToBytesCount.h
-        src/ThreadPool.h
-        LoadConfig.h)
+add_executable(ProjectProcessor
+        ProjectProcessor/main.cpp
+        ProjectProcessor/src/ProjectProcessor.cpp
+        ProjectProcessor/src/ArgToBytesCount.cpp
+)
 
-target_include_directories(ShrinkLog PRIVATE /usr/include/)
-target_link_libraries(ShrinkLog PRIVATE -l:libhs.so.5 -l:libxxhash.so.0 -l:libfmt.so.9 -l:libyaml-cpp.so.0.7.0)
+target_link_libraries(ProjectProcessor PRIVATE -l:libhs.so.5 -l:libxxhash.so.0 -l:libfmt.so.9 -l:libyaml-cpp.so.0.7.0)
