--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,6 +16,9 @@ add_executable(LogDecoder LogDecoder/main.cpp
         LogDecoder/src/File.cpp
         LogDecoder/src/File.h
         LogDecoder/src/MessageDescriptor.cpp
-        LogDecoder/src/MessageDescriptor.h)
+        LogDecoder/src/MessageDescriptor.h
+        LogDecoder/src/MessageDescriptorStorage.cpp
+        LogDecoder/src/MessageDescriptorStorage.h
+)
 
 target_link_libraries(LogDecoder PRIVATE -l:libhs.so.5 -l:libxxhash.so.0 -l:libfmt.so.9 -l:libyaml-cpp.so.0.7.0)
