--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,9 +6,10 @@ set(CMAKE_CXX_STANDARD 20)
 add_executable(ProjectProcessor
         ProjectProcessor/main.cpp
         ProjectProcessor/src/ProjectProcessor.cpp
-        ProjectProcessor/src/ArgToBytesCount.cpp
+        ProjectProcessor/src/ArgEncoder.cpp
 )
 target_link_libraries(ProjectProcessor PRIVATE -l:libhs.so.5 -l:libxxhash.so.0 -l:libfmt.so.9 -l:libyaml-cpp.so.0.7.0)
+#target_link_libraries(ProjectProcessor PRIVATE -l:libhs.a -l:libxxhash.a -l:libfmt.so -l:libyaml-cpp.a)
 
 add_executable(LogDecoder LogDecoder/main.cpp
         LogDecoder/src/Decoder.cpp
@@ -22,3 +23,5 @@ add_executable(LogDecoder LogDecoder/main.cpp
 )
 
 target_link_libraries(LogDecoder PRIVATE -l:libhs.so.5 -l:libxxhash.so.0 -l:libfmt.so.9 -l:libyaml-cpp.so.0.7.0)
+
+add_executable(TestProject TestProject/main.c)
