--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,3 +38,7 @@ target_include_directories(LogDecoder PRIVATE
 target_link_libraries(LogDecoder PRIVATE -l:libhs.so.5 -l:libxxhash.so.0 -l:libfmt.so.9 -l:libyaml-cpp.so.0.7.0)
 
 add_executable(TestProject TestProject/main.c)
+target_include_directories(TestProject PRIVATE
+    TestProject/subdir
+)
+
