Add execution of the ExampleProject_Test to the RunExampleProject.sh

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,9 @@
 .idea/
 cmake-*/
 *.ignore
-ExampleProject/logRaw.txt
-ExampleProject/logDecoded.txt
-ExampleProject/typesSz.txt
+ExampleProject/*.txt
 ExampleProject/slog/
+ExampleProject/testResults/
 
 # Prerequisites
 *.d
