Add support for long doubles and minor improvements

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -41,15 +41,15 @@ set(EXAMPLE_PROJECT_INC_DIR ExampleProject/subdir)
 
 add_executable(ExampleProject_LogDemo ${EXAMPLE_PROJECT_SRC})
 target_include_directories(ExampleProject_LogDemo PRIVATE ${EXAMPLE_PROJECT_INC_DIR})
-target_compile_definitions(ExampleProject_LogDemo PRIVATE -DSLOG_LOG_EXAMPLE)
+target_compile_definitions(ExampleProject_LogDemo PRIVATE -DSLOG_LOG_EXAMPLE -DSLOG_LONG_DOUBLE_ENABLE)
 
 add_executable(ExampleProject_TypeSizeDiscoveryDemo ${EXAMPLE_PROJECT_SRC})
 target_include_directories(ExampleProject_TypeSizeDiscoveryDemo PRIVATE ${EXAMPLE_PROJECT_INC_DIR})
-target_compile_definitions(ExampleProject_TypeSizeDiscoveryDemo PRIVATE -DSLOG_DISCOVER_EXAMPLE)
+target_compile_definitions(ExampleProject_TypeSizeDiscoveryDemo PRIVATE -DSLOG_DISCOVER_EXAMPLE -DSLOG_LONG_DOUBLE_ENABLE)
 
 add_executable(ExampleProject_Test ${EXAMPLE_PROJECT_SRC})
 target_include_directories(ExampleProject_Test PRIVATE ${EXAMPLE_PROJECT_INC_DIR})
-target_compile_definitions(ExampleProject_Test PRIVATE -DSLOG_TEST)
+target_compile_definitions(ExampleProject_Test PRIVATE -DSLOG_TEST -DSLOG_LONG_DOUBLE_ENABLE)
 
 # Dummy project to allow IDEs like CLion properly view the files
 add_library(TargetLibDummy INTERFACE
