README work in progress

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,7 +12,10 @@ target_include_directories(ProjectProcessor PRIVATE
         ProjectProcessor/src
         Common
 )
-target_link_libraries(ProjectProcessor PRIVATE -l:libhs.so.5 -l:libxxhash.so.0 -l:libfmt.so.9 -l:libyaml-cpp.so.0.7.0)
+target_link_libraries(ProjectProcessor PRIVATE
+        -l:libxxhash.so.0
+        -l:libfmt.so.9
+        -l:libyaml-cpp.so.0.7.0)
 
 add_executable(LogDecoder LogDecoder/main.cpp
         LogDecoder/src/Decoder.cpp
@@ -33,7 +36,10 @@ target_include_directories(LogDecoder PRIVATE
         ProjectProcessor/src
         Common
 )
-target_link_libraries(LogDecoder PRIVATE -l:libhs.so.5 -l:libxxhash.so.0 -l:libfmt.so.9 -l:libyaml-cpp.so.0.7.0)
+target_link_libraries(LogDecoder PRIVATE
+        -l:libxxhash.so.0
+        -l:libfmt.so.9
+        -l:libyaml-cpp.so.0.7.0)
 
 
 set(EXAMPLE_PROJECT_SRC ExampleProject/main.c)
